--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.72.5",
     "react-native-elements": "^3.4.3",
     "react-native-get-location": "^4.0.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
