--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@types/styled-components": "^5.1.28",
@@ -21,7 +22,8 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "use-elapsed-time": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
