--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-community/cli-platform-android": "^12.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
+    "@siposdani87/expo-maps-polygon-editor": "siposdani87/expo-maps-polygon-editor",
     "@types/styled-components": "^5.1.28",
+    "expo-location": "^16.3.0",
+    "expo-modules-core": "^1.5.12",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-elements": "^3.4.3",
     "react-native-get-location": "^4.0.0",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-timeline-flatlist": "^0.8.0",
     "react-native-vector-icons": "^10.0.0",
+    "robust-point-in-polygon": "^1.0.3",
     "styled-components": "^6.1.0",
     "use-elapsed-time": "^3.0.4"
   },
