--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "expo-modules-core": "^1.5.12",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-alert-notification": "^0.3.5",
     "react-native-elements": "^3.4.3",
     "react-native-get-location": "^4.0.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-maps": "^1.8.0",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-vector-icons": "^10.0.0",
-    "robust-point-in-polygon": "^1.0.3",
-    "styled-components": "^6.1.0",
-    "use-elapsed-time": "^3.0.4"
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
